--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2"
   },
