--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "image-webpack-loader": "^4.6.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "webpack-notifier": "^1.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
