--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "FSD-practice",
   "version": "1.0.0",
   "description": "Добавить сюда ссылку на Github Pages",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "sass-loader": "^7.1.0",
@@ -23,15 +30,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "start": "webpack-dev-server --open --mode development",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/npfate/FSD-practice.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexander",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/npfate/FSD-practice/issues"
